2017-02-03  Wenson Hsieh  <wenson_hsieh@apple.com>

        WKActionSheet should dismiss with animation when done with the sheet
        https://bugs.webkit.org/show_bug.cgi?id=167804
        <rdar://problem/30334861>

        Reviewed by Tim Horton.

        Currently, we do not dismiss the action menu when -doneWithSheet is invoked. While this is okay when the menu is
        dismissed via tap (since it will be dismissed as default behavior by the popover controller) we need to manually
        dismiss it if we are trying to programmatically dismiss the action sheet/menu.

        * UIProcess/ios/WKActionSheet.mm:
        (-[WKActionSheet presentSheetFromRect:]):
        (-[WKActionSheet doneWithSheet]):
        * UIProcess/ios/WKContentViewInteraction.mm:
        (-[WKContentView setupInteraction]):
        (-[WKContentView resignFirstResponder]):

2017-02-03  Olivier Blin  <olivier.blin@softathome.com>

        Doc generation failure in WebKitSecurityOrigin
        https://bugs.webkit.org/show_bug.cgi?id=167796

        Reviewed by Michael Catanzaro.

        * UIProcess/API/gtk/WebKitSecurityOrigin.cpp:
        warning: Free-form return value description in webkit_security_origin_get_protocol. Use `Returns:' to avoid ambiguities.

2017-02-03  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Add initial implementation of resource usage overlay
        https://bugs.webkit.org/show_bug.cgi?id=167731

        Reviewed by Michael Catanzaro.

        Toggle the resource usage overlay visibility by pressing CTRL + Shift + G. Only available when building with
        developer mode enabled.

        * UIProcess/API/gtk/WebKitWebViewBase.cpp:
        (webkitWebViewBaseKeyPressEvent):

2017-02-03  Carlos Garcia Campos  <cgarcia@igalia.com>

        REGRESSION(r211486) [GTK] The MiniBrowser doesn't work anymore.
        https://bugs.webkit.org/show_bug.cgi?id=167776

        Reviewed by Yusuke Suzuki.
