@@ -1,3 +1,14 @@
+2017-02-03  Anders Carlsson  <andersca@apple.com>
+
+        Inline createReceiveSource in its two call sites
+        https://bugs.webkit.org/show_bug.cgi?id=167809
+
+        Reviewed by Alex Christensen.
+
+        * Platform/IPC/mac/ConnectionMac.mm:
+        (IPC::Connection::open):
+        (IPC::createReceiveSource): Deleted.
+
 2017-02-03  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         WKActionSheet should dismiss with animation when done with the sheet
